# snitchbot

./: .env.example  .gitignore  .gitignore copy  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml
examples/anomaly_detection/: 0_rss_spike.py  1_cpu_sustained.py  2_fd_leak.py  3_thread_growth.py  4_watchdog.py
examples/features/: 0_notify.py  1_watch_slow.py  2_request_context.py  3_live_dashboard.py  4_chart_volatile_demo.py
examples/frameworks/: 0_fastapi.py  1_fastapi_structlog.py  2_flask.py  3_litestar.py
examples/lifecycle/: 0_clean_exit.py  1_sigterm.py  2_crash.py  3_thread_crash.py  4_sigkill.py  5_multiworker.py  README.md
examples/logging/: 0_stdlib.py  1_structlog.py
scripts/: check-docs-coverage.py
site/: astro.config.mjs  package.json  pnpm-lock.yaml
site/scripts/: generate-icons.mjs
site/src/components/: BrushDivider.astro  KanjiWatermark.astro  Paper.astro  SectionHead.astro
site/src/components/architecture/: Architecture.astro
site/src/components/cases/: CaseCode.astro  CaseTelegram.astro  Cases.astro  cases-data.ts  reveal.ts  tabs.ts
site/src/components/docs/: Breadcrumbs.astro  Callout.astro  ChipRow.astro  CodeBlock.astro  ExamplePair.astro  PageHead.astro  PageKicker.astro  PageMetaRow.astro  ParamsTable.astro  Sidebar.astro  Step.astro  TgAlert.astro  Toc.astro  Troubleshooting.astro  TryIt.astro  Watermark.astro  WhatsNext.astro  drawer.ts  toc.ts
site/src/components/footer/: Footer.astro
site/src/components/hero/: FootprintStrip.astro  Hero.astro
site/src/content/: config.ts
site/src/layouts/: BaseLayout.astro  DocsLayout.astro
site/src/lib/: base.ts  shiki.ts
site/src/pages/: index.astro
site/src/pages/docs/: [...slug].astro  (+1 more)
site/src/styles/: global.css
src/snitchbot/: __init__.py  config.py
src/snitchbot/client/: errors.py
src/snitchbot/integrations/: __init__.py  celery.py  fastapi.py  flask.py  litestar.py  logging_handler.py  structlog_processor.py
src/snitchbot/root/: __init__.py
src/snitchbot/shared/: constants.py
src/snitchbot/sidecar/: __main__.py
tests/: conftest.py  test_architecture.py  test_config.py  test_packaging.py  test_scaffold.py
tests/client/flow/: test_hello_service.py  test_init_integration.py  test_init_wiring.py  test_initialize_client_uc.py  test_reconnect_uc.py  test_send_event_uc.py
tests/client/integration/: test_flock_guard.py  test_notify_latency.py  test_unix_dgram_transport.py
tests/client/unit/: test_asyncio_patch.py  test_atexit_hook.py  test_client_scaffolding.py  test_config_forum.py  test_crash_classification.py  test_fork_safety.py  test_lifecycle_service.py  test_public_api_forum.py  test_request_context.py  test_signal_handlers.py  test_socket_path_service.py  test_stack_extraction.py  test_sys_excepthook.py  test_threading_excepthook.py  test_watch_slow.py  test_watchdog_policy.py  test_watchdog_thread.py
tests/e2e/: test_framework_integration.py  test_scrub_e2e.py
tests/integrations/unit/: test_celery_install.py  test_flask_init_app.py  test_integrations_import.py  test_logging_handler.py  test_structlog_processor.py
tests/shared/unit/: test_anomaly_config.py  test_config_hash.py  test_constants.py  test_duration_parser.py  test_errors.py  test_event_agg.py  test_event_kind_vo.py  test_fingerprint_service.py  test_msgpack_codec.py  test_payloads.py  test_scrubbing.py  test_severity_vo.py  test_truncation_service.py  test_validation_service.py
tests/sidecar/integration/: test_forum_mode_scenarios.py  test_sidecar_entrypoint.py
tests/sidecar/unit/: test_config.py
(+303 files in other folders)
