[project]
name = "snitchbot"
version = "1.0.0"
description = "Telegram telemetry: crash reports, slow calls, watchdog and anomaly alerts for Python services"
readme = "README.md"
authors = [
    { name = "Sense1Tapo4ek", email = "sense1.tapo4ek@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "msgpack>=1.0",
    "psutil>=5.9",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "asciichartpy>=1.5.25",
]

[project.optional-dependencies]
examples = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "litestar>=2.8",
    "flask>=3.0",
    "structlog>=24.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "anyio[trio]>=4.0",
    "coverage[toml]>=7.0",
    "mypy>=1.9",
    "ruff>=0.4",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-x --tb=short"

[tool.coverage.run]
source = ["src/snitchbot"]
omit = ["tests/*", "src/snitchbot/root/*"]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/snitchbot"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
